k8s/log-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-service-deployment
  namespace: fluentd-to-seq
  labels:
    app: log-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: log-service
  template:
    metadata:
      labels:
        app: log-service 
    spec:
      containers:
      - name: log-service
        image: joeamedeo/log-service:1.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
