k8s/log-client-cluster-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  log-client-cluster-ip-service
  namespace: fluentd-to-seq
spec:
  selector:
    app:  log-client
  type:  ClusterIP
  ports:
  - name:  log-client
    port:  80
    targetPort:  80
