k8s/log-service-ip-service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  log-service-cluster-ip-service
spec:
  selector:
    app:  log-service
  type:  ClusterIP
  ports:
  - name:  log-service
    port:  80
    targetPort:  8080
