k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: fluentd-to-seq
  annotations:
    nginx.ingress.kubernetes.io/nginx.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: log-client-cluster-ip-service
          servicePort: 80
